# nlp-ensae-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: gender_table.csv  preprocessed_dataset.csv  preprocessing.py
notebooks/: classification.ipynb  classifier.py
src/: classifier.py
